tests/ui/missing_response_type.stderr
error[E0412]: cannot find type `Todo` in this scope
 --> tests/ui/missing_response_type.rs:9:1
  |
9 | #[rovo]
  | ^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `rovo` (in Nightly builds, run with -Z macro-backtrace for more info)
